# testmaker

./: .gitignore  README.md  app.py  app_config.ini  db_config.py  pyproject.toml  pyrightconfig.json  requirements.txt
backups/: test_maker_2025-06-07_01-04-03.sql
controllers/: ClassController.py  QuestionController.py  SchoolController.py  SubjectController.py  TestController.py
db/: ClassRepo.py  QuestionRepo.py  SchoolRepo.py  SubjectRepo.py  TestRepo.py
enums/: QuestionTypeEnum.py
exceptions/: __init__.py  custom_exceptions.py
models/: Question.py  TestListModel.py  TestModel.py  __init__.py
models/dbModels/: Class.py  Fib.py  MatchA.py  MatchB.py  Mcq.py  QuestionDetails.py  QuestionDifficulty.py  QuestionImages.py  QuestionSubquestionMap.py  QuestionType.py  ReasonAssertion.py  School.py  Subject.py  Test.py  TestQuestionMap.py  TestSectionMap.py  TestType.py  __init__.py
services/: ClassService.py  QuestionService.py  SchoolService.py  SubjectService.py  TestService.py
utils/: __init__.py  logging_utils.py  mysql_backup_script.py
